# Gigantua

./: Gigantua.sln  README.md
.github/: FUNDING.yml
Gigantua/: Chess_Base.hpp  Chess_Test.hpp  Compile_linux.bat  Compile_linux.sh  Compile_win.bat  Gigantua.cpp  Gigantua.vcxproj  Gigantua.vcxproj.filters  Movegen.hpp  Movelist.hpp  SOURCECODE COMING SOON.txt
rust-Gigantua/: Cargo.toml  README.md
rust-Gigantua/src/: chess_base.rs  lib.rs  main.rs  movelist.rs  utils.rs
