[package]
name = "chess_move_gen"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Gigantua move generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
paste = "1.0.7"
